# baseliner

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
docs/: cli.md  configuration.md  control-repo.md  development.md  getting-started.md
examples/: baseliner.yaml  control-repo-workflow.yml
src/baseliner/: cli.py  config.py  engine.py
src/baseliner/actions/: github_issues.py
src/baseliner/checks/: base.py  git.py  hygiene.py  registry.py
src/baseliner/collectors/: base.py  filesystem.py  git.py  github_api.py
src/baseliner/discovery/: base.py  github.py  local.py
src/baseliner/models/: policy.py  repository.py  result.py  scope.py
src/baseliner/output/: console.py  json.py
src/baseliner/policies/: default.yaml
tests/: conftest.py  test_version.py
tests/fixtures/full_repo/: README.md
tests/integration/: test_cli_exit_codes.py  test_full_scan.py  test_scan_pipeline.py
tests/unit/: test_checks_git.py  test_checks_hygiene.py  test_config.py  test_filesystem_collector.py  test_git_collector.py  test_github_api_collector.py  test_github_discovery.py  test_local_discovery.py  test_output_console.py  test_output_json.py  test_policy_engine.py  test_policy_loader.py  test_repository_model.py
